Fix up that annoying gap error

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,9 @@ header nav{
 
 
 #recordform {
-      padding: 100px;
+      padding-top: 20px;
+      padding-left: 50px;
+      padding-bottom: 30px;
       margin-top: 10%;
 }
 
